96031    NL layout issues with BI-Di

--- a/org.eclipse.pde/intro/css/samples.css
+++ b/org.eclipse.pde/intro/css/samples.css
@@ -49,7 +49,7 @@
 
 .sample-link p .text {
 	display : block;
-	width : 300px;
+	width : 310px;
 	position : relative;
 	top : -45px;
 	left : 53px;
